--- a/index.html
+++ b/index.html
@@ -38,17 +38,116 @@
           </p>
         </div>
         <div class="pages">
-          <a href="" class="pagelinks active">The GUILD</a></br>
-          <a href="" class="pagelinks">About</a>
+          <a href="" class="pagelinks active">The GUILD</a><br />
+          <a href="about.html" class="pagelinks">About</a>
         </div>
         <div class="pages second">
-            <a href="" class="contactlinks">email</a>
-            <a href="" class="contactlinks">are.na</a>
-          </div>
+          <a href="" class="contactlinks">email</a>
+          <a href="" class="contactlinks">are.na</a>
+        </div>
       </div>
       <div class="container-right">
         <div class="header-right">
-            <p class="guild-update">Work in progress! Guild is almost ready to take it's first steps, meanwhile join our newsletter to get updates from us:</p>
+          <p class="guild-update">
+            Work in progress! Guild is almost ready to take it's first steps,
+            meanwhile join our newsletter to get updates from us:
+          </p>
+        </div>
+        <div class="news-right">
+          <form
+            class="signup"
+            action="https://gmail.us14.list-manage.com/subscribe/post?u=2b0e6dd0639b50c91c05f0708&amp;id=10361293b7&amp;f_id=00b7bde0f0"
+            method="post"
+            name="mc-embedded-subscribe-form"
+            class="validate"
+            target="_blank"
+          >
+            <div>
+              <h2 id="signup-header">Sign Up</h2>
+              <div class="fields">
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL"
+                    >Email Address:<span class="asterisk">*</span></label
+                  ><input
+                    type="email"
+                    name="EMAIL"
+                    class="required email text"
+                    id="mce-EMAIL"
+                    required=""
+                    value=""
+                  />
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-FNAME">First Name: </label
+                  ><input
+                    type="text"
+                    name="FNAME"
+                    class="text"
+                    id="mce-FNAME"
+                    value=""
+                  />
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-LNAME">Last Name: </label
+                  ><input
+                    type="text"
+                    name="LNAME"
+                    class="text"
+                    id="mce-LNAME"
+                    value=""
+                  />
+                </div>
+              </div>
+              <div id="mce-responses" class="clear foot">
+                <div class="response" style="display: none"></div>
+                <div class="response" style="display: none"></div>
+              </div>
+              <div aria-hidden="true" style="position: absolute; left: -5000px">
+                /* real people should not fill this in and expect good things -
+                do not remove this or risk form bot signups */
+                <input
+                  type="text"
+                  name="b_2b0e6dd0639b50c91c05f0708_10361293b7"
+                  tabindex="-1"
+                  value=""
+                />
+              </div>
+              <div class="optionalParent">
+                <div class="clear foot">
+                  <input
+                    type="submit"
+                    name="subscribe"
+                    id="mc-embedded-subscribe"
+                    class="button"
+                    value="Join the newsletter"
+                  />
+                </div>
+              </div>
+            </div>
+          </form>
+          <script
+            type="text/javascript"
+            src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+          ></script>
+          <script type="text/javascript">
+            (function ($) {
+              window.fnames = new Array();
+              window.ftypes = new Array();
+              fnames[0] = "EMAIL";
+              ftypes[0] = "email";
+              fnames[1] = "FNAME";
+              ftypes[1] = "text";
+              fnames[2] = "LNAME";
+              ftypes[2] = "text";
+              fnames[3] = "ADDRESS";
+              ftypes[3] = "address";
+              fnames[4] = "PHONE";
+              ftypes[4] = "phone";
+              fnames[5] = "BIRTHDAY";
+              ftypes[5] = "birthday";
+            })(jQuery);
+            var $mcj = jQuery.noConflict(true);
+          </script>
         </div>
       </div>
     </div>
