--- a/about.html
+++ b/about.html
@@ -49,12 +49,12 @@
       <div class="container-right">
         <div class="header-right">
           <p class="guild-info">
-            OCAD Design Guild is an in-house student-run design studio, we aim
-            to contribute to our community by providing design services to
-            student groups, student union, faculty and communities across OCAD.
-            The guild is opportunity to bring our practice to real life in
-            projects we deeply care about —a communal practice— facilitating
-            co-operation within our campus.
+            ODG is an in-house student-run design studio, we aim to contribute
+            to our community by providing design services to student groups,
+            student union, faculty and communities across OCAD. The guild is
+            opportunity to bring our practice to real life in projects we deeply
+            care about —a communal practice— facilitating co-operation within
+            our campus.
           </p>
         </div>
         <!-- <div class="news-right"></div> -->
