--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     name="subscribe"
                     id="mc-embedded-subscribe"
                     class="button"
-                    value="Join the newsletter"
+                    value="Join the newsletter!"
                   />
                 </div>
               </div>
