--- a/about.html
+++ b/about.html
@@ -42,8 +42,12 @@
           <a href="" class="pagelinks active">About</a>
         </div>
         <div class="pages second">
-          <a href="" class="contactlinks">email</a>
-          <a href="" class="contactlinks">are.na</a>
+          <a href="mailto:ocaddesignguild@gmail.com" class="contactlinks"
+            >email</a
+          >
+          <a href="https://www.are.na/ocad-design-guild" class="contactlinks"
+            >are.na</a
+          >
         </div>
       </div>
       <div class="container-right">
