--- a/colophon.html
+++ b/colophon.html
@@ -39,8 +39,8 @@
         </div>
         <div class="pages">
           <a href="index.html" class="pagelinks">The GUILD</a>
-          <a href="about.html" class="pagelinks active">About</a>
-          <a href="colophon.html" class="pagelinks">Colophon</a>
+          <a href="about.html" class="pagelinks">About</a>
+          <a href="colophon.html" class="pagelinks active">Colophon</a>
         </div>
         <div class="pages second">
           <a href="mailto:ocaddesignguild@gmail.com" class="contactlinks"
@@ -53,25 +53,56 @@
       </div>
       <div class="container-right">
         <div class="header-right">
-          <p class="guild-info">
-            ODG is an in-house student-run design studio, we aim to contribute
-            to our community by providing design services to student groups,
-            student union, faculty and communities across OCAD. The guild is
-            opportunity to bring our practice to real life in projects we deeply
-            care about —a communal practice— facilitating co-operation within
-            our campus.
-          </p>
+          <p class="block-title">WEBSITE:</p>
+          <div class="block-content">
+            <span class="block-content" style="font-style: italic"
+              >Technologies:</span
+            >
+            <ul class="block-content">
+              <li>
+                Developed using html, css and jquery.
+                <a
+                  href="https://github.com/pascal-is-waging/designguild"
+                  class="block-content-link"
+                  >source code</a
+                >
+              </li>
+              <li>Hosted on Github pages</li>
+              <li>
+                Domain acquired through
+                <a href="https://www.namecheap.com/" class="block-content-link"
+                  >namescheap.com</a
+                >
+              </li>
+              <li>
+                Newsletter running on
+                <a href="https://mailchimp.com/" class="block-content-link"
+                  >mailchimp</a
+                >
+              </li>
+            </ul>
+            <span class="block-content" style="font-style: italic"
+              >Fonts in use:</span
+            >
+            <ul class="block-content">
+              <li>
+                Heal the Web
+                <a href="https://healtheweb.site/" class="block-content-link"
+                  >by Jakub Kanior</a
+                >
+              </li>
+              <li>
+                Baskervvol
+                <a
+                  href="https://typotheque.genderfluid.space/baskervvol.html"
+                  class="block-content-link"
+                  >by Typotheque</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-        <!-- <div class="header-right">
-          <br />
-          <p class="block-content"></p>
-          <a
-            class="guild-info about"
-            href="https://www.are.na/ocad-design-guild/things-that-inspired-the-guild"
-            >Things that inspired the guild</a
-          >
-        </div>
-        <div class="news-right"></div> -->
+        <!-- <div class="news-right"></div> -->
       </div>
     </div>
   </body>
