--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
           </p>
         </div>
         <div class="pages">
-          <a href="" class="pagelinks active">The GUILD</a><br />
+          <a href="" class="pagelinks active">The GUILD</a>
           <a href="about.html" class="pagelinks">About</a>
+          <a href="colophon.html" class="pagelinks">Colophon</a>
         </div>
         <div class="pages second">
           <a href="mailto:ocaddesignguild@gmail.com" class="contactlinks"
@@ -67,7 +68,7 @@
             target="_blank"
           >
             <div>
-              <h2 id="signup-header">Sign Up</h2>
+              <h2 id="signup-header">SIGN UP</h2>
               <div class="fields">
                 <div class="mc-field-group">
                   <label for="mce-EMAIL"
