--- a/colophon.html
+++ b/colophon.html
@@ -105,5 +105,6 @@
         <!-- <div class="news-right"></div> -->
       </div>
     </div>
+    <div class="change-back">Change background</div>
   </body>
 </html>
