--- a/about.html
+++ b/about.html
@@ -49,6 +49,12 @@
           <a href="https://www.are.na/ocad-design-guild" class="contactlinks"
             >are.na</a
           >
+          <a
+            href="https://www.are.na/ocad-design-guild"
+            id="change-ground"
+            class="contactlinks"
+            >change background</a
+          >
         </div>
       </div>
       <div class="container-right">
