--- a/colophon.html
+++ b/colophon.html
@@ -49,8 +49,20 @@
           <a href="https://www.are.na/ocad-design-guild" class="contactlinks"
             >are.na</a
           >
+          <a
+            href="https://www.are.na/ocad-design-guild"
+            id="change-ground"
+            class="contactlinks"
+            >change background</a
+          >
         </div>
+        <!-- <div class="pages third">
+          <a href="index.html" class="pagelinks change"
+            >Change the background</a
+          >
+        </div> -->
       </div>
+
       <div class="container-right">
         <div class="header-right">
           <p class="block-title">WEBSITE:</p>
@@ -105,6 +117,6 @@
         <!-- <div class="news-right"></div> -->
       </div>
     </div>
-    <div class="change-back">Change background</div>
+    <!-- <div class="change-back">Change background</div> -->
   </body>
 </html>
