--- a/colophon.html
+++ b/colophon.html
@@ -16,6 +16,8 @@
       integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
+
     <script
       src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"
       integrity="sha256-Lsk+CDPOzTapLoAzWW0G/WeQeViS3FMzywpzPZV8SXk="
@@ -50,12 +52,15 @@
             >are.na</a
           >
           <a
-            href="https://www.are.na/ocad-design-guild"
+            href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
             id="change-ground"
             class="contactlinks"
-            >change background</a
+            >add your background</a
           >
         </div>
+        <button type="button" onClick="reloadThePage()" id="refreshBTN">
+          <p id="inthere">↻</p>
+        </button>
         <!-- <div class="pages third">
           <a href="index.html" class="pagelinks change"
             >Change the background</a
