--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
       integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
+
     <script
       src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"
       integrity="sha256-Lsk+CDPOzTapLoAzWW0G/WeQeViS3FMzywpzPZV8SXk="
@@ -50,10 +52,10 @@
             >are.na</a
           >
           <a
-            href="https://www.are.na/ocad-design-guild"
+            href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
             id="change-ground"
             class="contactlinks"
-            >change background</a
+            >add your background</a
           >
         </div>
       </div>
@@ -68,6 +70,9 @@
             our campus.
           </p>
         </div>
+        <button type="button" onClick="reloadThePage()" id="refreshBTN">
+          <p id="inthere">↻</p>
+        </button>
         <!-- <div class="header-right">
           <br />
           <p class="block-content"></p>
