--- a/colophon.html
+++ b/colophon.html
@@ -55,6 +55,7 @@
             href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
             id="change-ground"
             class="contactlinks"
+            target="_blank"
             >add your background</a
           >
         </div>
