--- a/about.html
+++ b/about.html
@@ -55,9 +55,13 @@
             href="https://docs.google.com/spreadsheets/d/1t5KQxRLhwsDz6YugontnYx1FkmKMXRsIm7Ty4Zba6UU/edit?usp=sharing"
             id="change-ground"
             class="contactlinks"
+            target="_blank"
             >add your background</a
           >
         </div>
+        <button type="button" onClick="reloadThePage()" id="refreshBTN">
+          <p id="inthere">↻</p>
+        </button>
       </div>
       <div class="container-right">
         <div class="header-right">
@@ -70,9 +74,7 @@
             our campus.
           </p>
         </div>
-        <button type="button" onClick="reloadThePage()" id="refreshBTN">
-          <p id="inthere">↻</p>
-        </button>
+
         <!-- <div class="header-right">
           <br />
           <p class="block-content"></p>
