--- a/colophon.html
+++ b/colophon.html
@@ -73,8 +73,8 @@
         <div class="header-right">
           <p class="block-title">WEBSITE:</p>
           <div class="block-content">
-            <span class="block-content" style="font-style: italic"
-              >Technologies:</span
+            <span class="block-content top" style="font-style: italic"
+              >Technologies</span
             >
             <ul class="block-content">
               <li>
@@ -99,8 +99,9 @@
                 >
               </li>
             </ul>
-            <span class="block-content" style="font-style: italic"
-              >Fonts in use:</span
+            <br />
+            <span class="block-content top" style="font-style: italic"
+              >Fonts in use</span
             >
             <ul class="block-content">
               <li>
@@ -116,6 +117,42 @@
                   class="block-content-link"
                   >by Typotheque</a
                 >
+              </li>
+            </ul>
+            <br />
+            <span class="block-content top" style="font-style: italic"
+              >Land Acknowledgment</span
+            >
+            <ul class="block-content">
+              <li>
+                This website is a physical being, hardware, memory; residing
+                somewhere in a gigantic
+                <a href="https://www.equinix.com/" class="block-content-link"
+                  >Equinix</a
+                >
+                /
+                <a
+                  href="https://www.digitalrealty.com/"
+                  class="block-content-link"
+                  >Digital Reality</a
+                >
+                's data center. We cannot track it's exact location but
+                acknowledging it's physical existence somewhere on this planet
+                is the first step.
+              </li>
+              <li>
+                We work and create on the ancestral and traditional territories
+                of the Mississaugas of the Credit, the Haudenosaunee, the
+                Anishinaabe and the Huron-Wendat.
+                <span class="block-content-link">
+                  We are grateful to work on this land!
+                </span>
+              </li>
+              <li>
+                This acknowledgment does not exist in the past, rather this is
+                an on-going project. The first step on a long arduous path to
+                reconstruct and reevaluate our relationship to the land we live
+                in, to it's history, to our earth.
               </li>
             </ul>
           </div>
