--- a/colophon.html
+++ b/colophon.html
@@ -138,14 +138,14 @@
                 >
                 's data center. We cannot track it's exact location but
                 acknowledging it's physical existence somewhere on this planet
-                is the first step.
+                is crucial.
               </li>
               <li>
                 We work and create on the ancestral and traditional territories
                 of the Mississaugas of the Credit, the Haudenosaunee, the
                 Anishinaabe and the Huron-Wendat.
                 <span class="block-content-link">
-                  We are grateful to work on this land!
+                  We are grateful to work on this land.
                 </span>
               </li>
               <li>
