--- a/colophon.html
+++ b/colophon.html
@@ -149,8 +149,8 @@
                 </span>
               </li>
               <li>
-                This acknowledgment does not exist in the past, rather this is
-                an on-going project. The first step on a long arduous path to
+                This acknowledgment does not exist in the past, rather its part
+                of an on-going effort. The first step on a long arduous path to
                 reconstruct and reevaluate our relationship to the land we live
                 in, to it's history, to our earth.
               </li>
