--- a/about.html
+++ b/about.html
@@ -24,23 +24,23 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js" defer></script>
-    <title>OCAD Design Guild</title>
+    <title>100m Studio</title>
   </head>
   <body>
     <div class="main">
       <div class="container-left">
         <div class="header">
           <p id="title" class="titleocad">
-            <sup>ocad</sup> <span class="change">D</span
-            ><span class="change">e</span><span class="change">s</span
-            ><span class="change">i</span><span class="change">g</span
-            ><span class="change">n</span> <span class="change">G</span
-            ><span class="change">u</span><span class="change">i</span
-            ><span class="change">l</span><span class="change">d</span>
+            <!-- <sup>ocad</sup> -->
+            <span class="change">1</span><span class="change">0</span
+            ><span class="change">0</span><span class="change">m</span>
+            <span class="change">S</span><span class="change">t</span
+            ><span class="change">u</span><span class="change">d</span
+            ><span class="change">i</span><span class="change">o</span>
           </p>
         </div>
         <div class="pages">
-          <a href="index.html" class="pagelinks">The GUILD</a>
+          <a href="index.html" class="pagelinks">Work</a>
           <a href="about.html" class="pagelinks active">About</a>
           <a href="colophon.html" class="pagelinks">Colophon</a>
         </div>
@@ -66,9 +66,9 @@
       <div class="container-right">
         <div class="header-right">
           <p class="guild-info">
-            ODG is an in-house student-run design studio, we aim to contribute
+            100m is an in-house student-run design studio, we aim to contribute
             to our community by providing design services to student groups,
-            student union, faculty and communities across OCAD. The guild is
+            student union, faculty and communities across OCAD. 100m is an
             opportunity to bring our practice to real life in projects we deeply
             care about —a communal practice— facilitating co-operation within
             our campus.
