--- a/colophon.html
+++ b/colophon.html
@@ -31,16 +31,15 @@
       <div class="container-left">
         <div class="header">
           <p id="title" class="titleocad">
-            <sup>ocad</sup> <span class="change">D</span
-            ><span class="change">e</span><span class="change">s</span
-            ><span class="change">i</span><span class="change">g</span
-            ><span class="change">n</span> <span class="change">G</span
-            ><span class="change">u</span><span class="change">i</span
-            ><span class="change">l</span><span class="change">d</span>
+            <span class="change">1</span><span class="change">0</span
+            ><span class="change">0</span><span class="change">m</span
+            ><span class="change"> S</span><span class="change">t</span
+            ><span class="change">u</span><span class="change">d</span
+            ><span class="change">i</span><span class="change">o</span>
           </p>
         </div>
         <div class="pages">
-          <a href="index.html" class="pagelinks">The GUILD</a>
+          <a href="index.html" class="pagelinks">Work</a>
           <a href="about.html" class="pagelinks">About</a>
           <a href="colophon.html" class="pagelinks active">Colophon</a>
         </div>
