--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
     ></script>
     <script src="app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
-    <title>OCAD Design Guild</title>
+    <title>100m</title>
   </head>
   <body>
     <div class="main">
       <div class="container-left">
         <div class="header">
           <p id="title" class="titleocad">
-            <sup>ocad</sup> <span class="change">D</span
-            ><span class="change">e</span><span class="change">s</span
-            ><span class="change">i</span><span class="change">g</span
-            ><span class="change">n</span> <span class="change">G</span
-            ><span class="change">u</span><span class="change">i</span
-            ><span class="change">l</span><span class="change">d</span>
+            <!-- <sup>ocad</sup> -->
+            <span class="change">1</span><span class="change">0</span
+            ><span class="change">0</span><span class="change">m</span
+            ><span class="change"> S</span><span class="change">t</span
+            ><span class="change">u</span><span class="change">d</span
+            ><span class="change">i</span><span class="change">o</span>
           </p>
         </div>
         <div class="pagemain">
           <div class="pages">
-            <a href="" class="pagelinks active">The GUILD</a>
+            <a href="" class="pagelinks active">Work</a>
             <a href="about.html" class="pagelinks">About</a>
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
@@ -78,7 +78,7 @@
       <div class="container-right">
         <div class="header-right">
           <p class="guild-update">
-            Work in progress! Guild is almost ready to take it's first steps,
+            Work in progress! 100m is almost ready to take it's first steps,
             meanwhile join our newsletter to get updates from us:
           </p>
         </div>
