--- a/about.html
+++ b/about.html
@@ -45,10 +45,8 @@
           <a href="colophon.html" class="pagelinks">Colophon</a>
         </div>
         <div class="pages second">
-          <a href="mailto:ocaddesignguild@gmail.com" class="contactlinks"
-            >email</a
-          >
-          <a href="https://www.are.na/ocad-design-guild" class="contactlinks"
+          <a href="mailto:100mc.studio@gmail.com" class="contactlinks">email</a>
+          <a href="https://www.are.na/100m-studio" class="contactlinks"
             >are.na</a
           >
           <a
@@ -59,19 +57,19 @@
             >add your background</a
           >
         </div>
-        <button type="button" onClick="reloadThePage()" id="refreshBTN">
+        <!-- <button type="button" onClick="reloadThePage()" id="refreshBTN">
           <p id="inthere">↻</p>
-        </button>
+        </button> -->
       </div>
       <div class="container-right">
         <div class="header-right">
           <p class="guild-info">
-            100m is an in-house student-run design studio, we aim to contribute
-            to our community by providing design services to student groups,
-            student union, faculty and communities across OCAD. 100m is an
-            opportunity to bring our practice to real life in projects we deeply
-            care about —a communal practice— facilitating co-operation within
-            our campus.
+            100m is an in-house design studio at OCAD run by students, we aim to
+            contribute to our community by providing design services to student
+            groups, student union, faculty and communities across the campus.
+            100m is an opportunity to bring our practice to real life in
+            projects we deeply care about —a communal practice— facilitating
+            co-operation within our campus.
           </p>
           <!-- <a
             class="guild-info link"
