--- a/colophon.html
+++ b/colophon.html
@@ -44,10 +44,8 @@
           <a href="colophon.html" class="pagelinks active">Colophon</a>
         </div>
         <div class="pages second">
-          <a href="mailto:ocaddesignguild@gmail.com" class="contactlinks"
-            >email</a
-          >
-          <a href="https://www.are.na/ocad-design-guild" class="contactlinks"
+          <a href="mailto:100mc.studio@gmail.com" class="contactlinks">email</a>
+          <a href="https://www.are.na/100m-studio" class="contactlinks"
             >are.na</a
           >
           <a
@@ -58,9 +56,9 @@
             >add your background</a
           >
         </div>
-        <button type="button" onClick="reloadThePage()" id="refreshBTN">
+        <!-- <button type="button" onClick="reloadThePage()" id="refreshBTN">
           <p id="inthere">↻</p>
-        </button>
+        </button> -->
         <!-- <div class="pages third">
           <a href="index.html" class="pagelinks change"
             >Change the background</a
