--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <a href="colophon.html" class="pagelinks">Colophon</a>
           </div>
           <div class="pages second">
-            <a href="mailto:ocaddesignguild@gmail.com" class="contactlinks"
+            <a href="mailto:100mc.studio@gmail.com" class="contactlinks"
               >email</a
             >
-            <a href="https://www.are.na/ocad-design-guild" class="contactlinks"
+            <a href="https://www.are.na/100m-studio" class="contactlinks"
               >are.na</a
             >
             <a
@@ -59,9 +59,9 @@
               >add your background</a
             >
           </div>
-          <button type="button" onClick="reloadThePage()" id="refreshBTN">
+          <!-- <button type="button" onClick="reloadThePage()" id="refreshBTN">
             <p id="inthere">↻</p>
-          </button>
+          </button> -->
           <!-- <div class="pages third">
             <p class="block-content-left">
               You can change the background in this<a
