--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js" defer></script>
-    <title>100m Studio</title>
+    <title>100m</title>
   </head>
   <body>
     <div class="main">
@@ -64,12 +64,13 @@
       <div class="container-right">
         <div class="header-right">
           <p class="guild-info">
-            100m is an in-house design studio at OCAD run by students, we aim to
-            contribute to our community by providing design services to student
-            groups, student union, faculty and communities across the campus.
-            100m is an opportunity to bring our practice to real life in
-            projects we deeply care about —a communal practice— facilitating
-            co-operation within our campus.
+            <span class="mtag">100m</span> is an in-house design studio at OCAD
+            run by students, we aim to contribute to our community by providing
+            design services to student groups, student union, faculty and
+            communities across the campus. <span class="mtag">100m</span> is an
+            opportunity to bring our practice to real life in projects we deeply
+            care about —a communal practice— facilitating co-operation within
+            our campus.
           </p>
           <!-- <a
             class="guild-info link"
