--- a/colophon.html
+++ b/colophon.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js" defer></script>
-    <title>OCAD Design Guild</title>
+    <title>100m</title>
   </head>
   <body>
     <div class="main">
