--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
       </div>
       <div class="container-right">
         <div class="header-right">
-          <p class="guild-update">
-            Work in progress! 100m is almost ready to take it's first steps,
-            meanwhile join our newsletter to get updates from us:
-          </p>
+          <p class="block-title">Join our first meeting!</p>
+          <p class="block-content">meet us october 26th, room 656, 6:30pm</p>
+          <img
+            class="block-img"
+            src="https://d2w9rnfcy7mm78.cloudfront.net/24261243/original_3854b371432e4f27fba32ae07f4a72b6.jpg?1697788884?bc=0"
+          />
         </div>
         <div class="news-right">
           <form
@@ -92,7 +94,7 @@
             target="_blank"
           >
             <div>
-              <h2 id="signup-header">SIGN UP</h2>
+              <h2 id="signup-header">Sign up for our newsletter</h2>
               <div class="fields">
                 <div class="mc-field-group">
                   <label for="mce-EMAIL"
