--- a/colophon.html
+++ b/colophon.html
@@ -148,8 +148,8 @@
               <li>
                 Written acknowledgments do not exist in the past, rather they
                 signify an important effort. The first step on a long arduous
-                path to reconstruct and reevaluate our relationship with the
-                land we live in, with it's history, with our earth.
+                path to reconstruct and reevaluate our relationship to the land
+                we live in, to it's history, to our earth.
               </li>
             </ul>
           </div>
