--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             target="_blank"
           >
             <div>
-              <h2 id="signup-header">Sign up for our newsletter</h2>
+              <p id="signup-header">Sign up for our newsletter</p>
               <div class="fields">
                 <div class="mc-field-group">
                   <label for="mce-EMAIL"
