--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <title>100m</title>
   </head>
   <body>
+    <div class="popup">
+      <img src="" alt="" class="popup-content" />
+    </div>
     <div class="main">
       <div class="container-left">
         <div class="header">
