--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
       <div class="container-right">
         <div class="header-right">
           <p class="block-title">Join our first meeting!</p>
-          <p class="block-content">meet us october 26th, room 656, 6:30pm</p>
+          <p class="block-content">
+            meet us october 26th, room 656 100mcCaul, 6:30pm
+          </p>
           <img
             class="block-img"
             src="https://d2w9rnfcy7mm78.cloudfront.net/24261243/original_3854b371432e4f27fba32ae07f4a72b6.jpg?1697788884?bc=0"
