--- a/index.html
+++ b/index.html
@@ -80,16 +80,27 @@
       </div>
       <div class="container-right">
         <div class="header-right">
-          <p class="block-title">Join our first meeting!</p>
+          <div class="block-title">Joining 100m?!</div>
+          <div class="block-content">
+            <a
+              href="https://forms.office.com/r/GXufCZLkn2"
+              class="block-content-link"
+              >fill this form </a
+            >to get updates from us!
+          </div>
+        </div>
+        <div class="header-right">
+          <p class="block-title">Our first meeting!</p>
           <p class="block-content">
-            meet us october 26th, room 656 100mcCaul, 6:30pm
+            meet us october 26th, 100mcCaul — room 656, 6:30pm
           </p>
           <img
             class="block-img"
             src="https://d2w9rnfcy7mm78.cloudfront.net/24261243/original_3854b371432e4f27fba32ae07f4a72b6.jpg?1697788884?bc=0"
           />
         </div>
-        <div class="news-right">
+
+        <!-- <div class="news-right">
           <form
             class="signup"
             action="https://gmail.us14.list-manage.com/subscribe/post?u=2b0e6dd0639b50c91c05f0708&amp;id=10361293b7&amp;f_id=00b7bde0f0"
@@ -184,7 +195,7 @@
             })(jQuery);
             var $mcj = jQuery.noConflict(true);
           </script>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
