--- a/index.html
+++ b/index.html
@@ -85,8 +85,13 @@
             <a
               href="https://forms.office.com/r/GXufCZLkn2"
               class="block-content-link"
-              >fill this form </a
-            >to get updates from us!
+              >Fill this form </a
+            >to get updates from us! <br />
+            <a
+              href="https://chat.whatsapp.com/KrUpP9RoIeDKYu3ks2NNa0"
+              class="block-content-link"
+              >Open studio whatsapp </a
+            >link
           </div>
         </div>
         <div class="header-right">
